fix toolbar spacing

--- a/src/stylus/components/_toolbar.styl
+++ b/src/stylus/components/_toolbar.styl
@@ -36,7 +36,7 @@ theme(v-toolbar, "v-toolbar")
     font-size: $headings.h6.size
     font-weight: $headings.h6.weight
     letter-spacing: $headings.h6.letter-spacing
-    margin-left: 16px
+    margin-left: 12px
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
@@ -51,10 +51,10 @@ theme(v-toolbar, "v-toolbar")
       max-height: 100%
 
     > .v-btn:last-child, > .menu:last-child
-      margin-right: 8px
+      margin-right: 16px
 
     > .v-btn:first-child, > .menu:first-child
-      margin-left: 8px
+      margin-left: 16px
 
     > *:not(.v-btn):not(.menu):first-child:not(:only-child)
       margin-left: $grid-gutters.lg
